plugins {
    id 'java'
    id 'application'
    id 'com.gradleup.shadow' version '9.3.1'
}

group = 'com.tindapp'
version = '1.0.0'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(26)
    }
}

repositories {
    mavenCentral()
}

ext {
    vertxVersion = '4.5.22'
    flywayVersion = '9.22.3'
    logbackVersion = '1.4.11'
    jacksonVersion = '2.15.2'
    postgresqlVersion = '42.7.8'
    scramVersion = '2.1'
    stringprepVersion = '1.1'
}

dependencies {
    implementation "io.vertx:vertx-core:$vertxVersion"
    implementation "io.vertx:vertx-web:$vertxVersion"

    implementation "com.fasterxml.jackson.core:jackson-core:$jacksonVersion"
    implementation "com.fasterxml.jackson.core:jackson-databind:$jacksonVersion"
    implementation "com.fasterxml.jackson.core:jackson-annotations:$jacksonVersion"
    implementation "com.fasterxml.jackson.datatype:jackson-datatype-jsr310:$jacksonVersion"

    implementation "io.vertx:vertx-pg-client:$vertxVersion"
    implementation "io.vertx:vertx-sql-client:$vertxVersion"
    implementation "org.postgresql:postgresql:$postgresqlVersion"
    implementation "org.flywaydb:flyway-core:$flywayVersion"
    implementation "com.ongres.scram:common:$scramVersion"
    implementation "com.ongres.scram:client:$scramVersion"
    implementation "com.ongres.stringprep:saslprep:$stringprepVersion"

    implementation "io.vertx:vertx-config:$vertxVersion"

    implementation "ch.qos.logback:logback-classic:$logbackVersion"
    implementation "org.slf4j:slf4j-api:2.0.9"

    implementation "io.vertx:vertx-auth-jwt:$vertxVersion"
}

application {
    mainClass = 'com.tindapp.MainVerticle'
}

shadowJar {
    archiveClassifier.set('fat')
    manifest {
        attributes 'Main-Verticle': 'com.tindapp.MainVerticle'
        attributes 'Main-Class': 'io.vertx.core.Launcher'
    }
    mergeServiceFiles()
}

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
    options.compilerArgs.addAll(['-parameters'])
}

task runDev(type: JavaExec) {
    classpath = sourceSets.main.runtimeClasspath
    mainClass = 'io.vertx.core.Launcher'
    args = ['run', 'com.tindapp.MainVerticle', '--redeploy=src/**/*', '--launcher-class=io.vertx.core.Launcher']
}
